--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -6,7 +6,7 @@
   <%= f.password_field :password, label: 'New password', :autofocus => true %>
   <%= f.password_field :password_confirmation, label: 'Confirm new password' %>
 
-  <%= f.primary "Change my password", data: { disable_with: 'Changing...' } %>
+  <%= f.submit "Change my password", data: { disable_with: 'Changing...' } %>
 <% end %>
 
 <%= render "devise/shared/links" %>
