Added information labels to navbar, now people can read if they mess up

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -83,3 +83,9 @@ a span {
 a span:hover {
   color: #000
 }
+
+.info-label {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  position: relative;
+}
