--- a/app/views/layouts/_signin.html.erb
+++ b/app/views/layouts/_signin.html.erb
@@ -2,6 +2,7 @@
 
   <%= f.email_field :email, hide_label: :true, placeholder: 'Email', :autofocus => true %>
   <%= f.password_field :password, hide_label: :true, placeholder: 'Password' %>
+  <%= f.hidden_field :remember_me, :value => "1" %>
 
   <%= f.submit 'Sign in', data: { disable_with: 'Signing in...' }, class: "btn btn-success" %>
 <% end %>
