--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -17,6 +17,11 @@
         <% end %>
 
         <tr>
+          <td><h6>Status</h6></td>
+          <td><%= @entry.status %></td>
+        </tr>
+
+        <tr>
           <td><h6>Serial Number</h6></td>
           <td><%= @entry.serialnum %></td>
         </tr>
