--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -151,9 +151,11 @@
       <%= link_to("Create zip", zip_path(@entry), :class => 'btn btn-mini btn-primary') %>
     <% end %>
   <% end %>
-  <% if can? :create, Entry %>
-    <%= link_to("Create sticker", sticker_path(@entry), :class => 'btn btn-mini btn-primary') %>
-  <% end %>
+  <div style="float:left;padding-right:4px" data-no-turbolink="true">
+    <% if can? :create, Entry %>
+      <%= link_to("Create sticker", sticker_path(@entry), :class => 'btn btn-mini btn-primary') %>
+    <% end %>
+  </div>
   <% if can? :edit, Entry %>
     <%= link_to("Edit entry", edit_entry_path(@entry), :class => 'btn btn-mini btn-primary') %>
   <% end %>
