--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
               <span class="icon-bar"></span>
             </button>
           <%= link_to("Badger", root_path, :class => "navbar-brand") %>
-	</div>
+	      </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <nav class="collapse navbar-collapse navbar-collapse-1" role="navigation">
@@ -38,7 +38,7 @@
       <div class="container">
         <div class="content">
           <div class="row">
-            <div class="span12">
+            <div class="col-md-12">
               <%= render 'layouts/messages' %>
               <%= yield %>
             </div>
@@ -48,19 +48,27 @@
         </div>
       </div> <!--! end of .container -->
     </div> <!--! end of #main -->
-    <footer>
+    <footer class="bs-footer">
       <div class="container">
-        <p class="pull-right text-muted">
+            <div class="bs-social">
+        <ul class="bs-social-buttons"></ul>
+    </div>
+    <p></p>
+    <p>&copy; nohm 2013</p>
+    <ul class="footer-links">
           <% unless user_signed_in? %>
-            <%= render 'layouts/signup_button' %> - 
-            <%= link_to "Forgot your password?", new_password_path(:user) %> - 
-          <% end %>
-          <%= render 'layouts/report_button' %> - 
-          &copy; nohm 2013
-        </p>
+        <li><%= render 'layouts/signup/button' %></li>
+        <li class="muted"> · </li>
+        <li><%= link_to "Forgot your password?", new_password_path(:user) %></li>
+        <li class="muted"> · </li>
+        <% end %>
+        <li><%= render 'layouts/report/button' %></li>
+    </ul>
+
+</div>
       </div>
     </footer>
-    <%= render 'layouts/signup_form' %> 
-    <%= render 'layouts/report_form' %> 
+    <%= render 'layouts/signup/form' %> 
+    <%= render 'layouts/report/form' %> 
   </body>
 </html>
