--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <%= yield(:head) %>
   </head>
   <body class="<%= controller_name %> <%= action_name %>">
+  
     <header class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -34,6 +35,7 @@
         </nav><!-- /.navbar-collapse -->
       </div>
     </header>
+
     <div id="main" role="main">
       <div class="container">
         <div class="content">
@@ -43,14 +45,17 @@
               <%= yield %>
             </div>
           </div>
-          <footer>
-          </footer>
         </div>
       </div> <!--! end of .container -->
     </div> <!--! end of #main -->
-    <footer class="bs-footer">
+
+    <footer>
       <div class="container">
         <p>Made and maintained by <a href="mailto:info@nohm.eu">nohm</a></p>
+        <p>
+          <code>uptime <%= %x[uptime | awk '{print $1}'] %></code>
+          <code>response <%= "%.2f" % (Time.now.to_f - @time + 0.02) %></code>
+        </p>
         <ul class="footer-links">
             <% unless user_signed_in? %>
               <li><%= render 'layouts/signup/button' %></li>
@@ -59,9 +64,20 @@
               <li class="muted"> · </li>
             <% end %>
             <li><%= render 'layouts/report/button' %></li>
+            <% if can? :manage, User %>
+              <li class="muted"> · </li>
+              <li><%= link_to("Users", users_path) %></li>
+              <li class="muted"> · </li>
+              <li><%= link_to("Appliances", appliances_path) %></li>
+              <li class="muted"> · </li>
+              <li><%= link_to("Classes", classifications_path) %></li>
+              <li class="muted"> · </li>
+              <li><%= link_to("History", history_index_path) %></li>
+            <% end %>
         </ul>
       </div>
     </footer>
+
     <%= render 'layouts/signup/form' %> 
     <%= render 'layouts/report/form' %> 
   </body>
