I should learn awk.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
       <div class="container">
         <p>Made and maintained by <a href="mailto:info@nohm.eu">nohm</a></p>
         <p>
-          <code>uptime <%= %x[uptime | awk '{print $1}'] %></code>
+          <code>uptime <%= %x[uptime | awk '{print $3":"$1}'] %></code>
           <code>response <%= "%.2f" % (Time.now.to_f - @time + 0.02) %></code>
         </p>
         <ul class="footer-links">
