--- a/app/views/layouts/signup/_button.html.erb
+++ b/app/views/layouts/signup/_button.html.erb
@@ -1,4 +1,4 @@
 <!-- Button trigger modal -->
-<a href="#" data-toggle="modal" data-target="#modal-signup">
+<a href="#" class="btn btn-danger btn-signup" data-toggle="modal" data-target="#modal-signup" data-no-turbolink="true">
   Sign Up
 </a>
