--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,79 +12,29 @@
   </head>
   <body class="<%= controller_name %> <%= action_name %>">
   
-    <header class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          <%= link_to("Badger", root_path, :class => "navbar-brand") %>
-	      </div>
+    <% if user_signed_in? %>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <nav class="collapse navbar-collapse navbar-collapse-1" role="navigation">
-          <% if user_signed_in? %>
-            <%= render 'layouts/navigation' %>
-          <% else %>
-            <%= render 'layouts/signin' %>
-          <% end %>
-        </nav><!-- /.navbar-collapse -->
-      </div>
-    </header>
+      <%= render 'layouts/header' %>
 
-    <div id="main" role="main">
-      <div class="container">
-        <div class="content">
-          <div class="row">
-            <div class="col-md-12">
-              <%= render 'layouts/messages' %>
-              <%= yield %>
+      <div id="main" role="main">
+        <div class="container">
+          <div class="content">
+            <div class="row">
+              <div class="col-md-12">
+                <%= render 'layouts/messages' %>
+                <%= yield %>
+              </div>
             </div>
           </div>
-        </div>
-      </div> <!--! end of .container -->
-    </div> <!--! end of #main -->
+        </div> <!--! end of .container -->
+      </div> <!--! end of #main -->
 
-    <footer>
-      <div class="container">
-        <p>Made and maintained by <a href="mailto:info@nohm.eu">nohm</a></p>
-        <% if user_signed_in? and can? :manage, User %>
-          <p>
-            <code>
-              uptime <%= %x[uptime | awk '{print $3":"$1}'] %>
-              response <%= "%.2f" % (Time.now.to_f - @time + 0.02) %>
-            </code>
-          </p>
-        <% end %>
-        <ul class="footer-links">
-            <% unless user_signed_in? %>
-              <li><%= render 'layouts/signup/button' %></li>
-              <li class="muted"> · </li>
-              <li><%= link_to "Forgot your password?", new_password_path(:user) %></li>
-              <li class="muted"> · </li>
-            <% end %>
-            <li><%= render 'layouts/report/button' %></li>
-            <% if user_signed_in? and can? :manage, User %>
-              <li class="muted"> · </li>
-              <li><%= link_to("Users", users_path) %></li>
-              <li class="muted"> · </li>
-              <li><%= link_to("Appliances", appliances_path) %></li>
-              <li class="muted"> · </li>
-              <li><%= link_to("Classes", classifications_path) %></li>
-              <li class="muted"> · </li>
-              <li><%= link_to("History", history_index_path) %></li>
-            <% end %>
-        </ul>
-      </div>
-    </footer>
+      <%= render 'layouts/footer' %>
 
-    <% unless user_signed_in? %>
-      <%= render 'layouts/signup/form' %> 
-    <% end %>
+    <% else %>
+      <%= render 'layouts/landing' %>
+    <% end %> 
+
     <%= render 'layouts/report/form' %> 
   </body>
 </html>
