--- a/app/views/layouts/_landing.html.erb
+++ b/app/views/layouts/_landing.html.erb
@@ -1,5 +1,7 @@
 <%= stylesheet_link_tag "landing" %>
 
+<div class="landing">
+
 <div id="headerwrap">
 	<div class="container">
 		<br>
@@ -27,3 +29,4 @@
 </a>
 
 <%= render 'layouts/signup/form' %> 
+</div>
