--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -130,7 +130,7 @@ body {
 /* Landing page */
 .landing {
   padding: 0;
-  background: url(../header-bg.jpg) no-repeat center;
+  background: url(../assets/header-bg.jpg) no-repeat center;
 }
 
 .landing #headerwrap {
